--- a/package.json
+++ b/package.json
@@ -1,30 +1,29 @@
 {
-  "name": "daynumber",
-  "version": "1.0.0",
-  "description": "XXX - 30 Day Vanilla JS Coding Challenge",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "light-server -s . -b localhost -p 3333 -w './**' --historyindex '/index.html' -o"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/b3n10/javascript30.git"
-  },
-  "keywords": [
-    "js",
-    "html",
-    "css",
-    "js30"
-  ],
-  "author": "Ben Lleve",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/b3n10/javascript30/issues"
-  },
-  "devDependencies": {
-    "light-server": "^2.2.1"
-  },
+	"name": "daynumber",
+	"version": "1.0.0",
+	"description": "",
+	"main": "app.js",
+	"scripts": {
+		"dev": "light-server -c light-server.json"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/b3n10/javascript30.git"
+	},
+	"keywords": [
+		"js",
+		"html",
+		"css",
+		"js30"
+	],
+	"author": "Ben Lleve",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/b3n10/javascript30/issues"
+	},
+	"devDependencies": {
+		"light-server": "^2.2.1"
+	},
 	"homepage1": "https://www.youtube.com/playlist?list=PLu8EoSxDXHP6CGK4YVJhL_VWetA865GOH",
 	"homepage2": "https://javascript30.com"
 }
