--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "daynumber",
   "version": "1.0.0",
-  "description": "",
+  "description": "Exercise project using JavaScript 30 Tutorial by Wes Bos",
   "main": "src/main.js",
   "scripts": {
     "dev": "light-server -c light-server.json"
