--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,7 @@
 {
 	"extends": "standard",
 	"rules": {
-		"quotes": ["error", "double"],
 		"semi": ["error", "always"],
-		"indent": ["error", "tab"],
-		"no-tabs": 0
+		"quotes": ["error", "double"]
 	}
 }
