Add npm to /home/ben/sdcard-16gig/Projects/javascript30/node_modules/.bin/:/home/ben/bin:/home/ben/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Exercise project using JavaScript 30 Tutorial by Wes Bos",
   "main": "src/main.js",
   "scripts": {
-    "test": "../node_modules/.bin/eslint src/ && ../node_modules/.bin/babel src/ -d lib",
-    "dev": "../node_modules/.bin/light-server -c .lightserverrc"
+    "test": "eslint src/ && babel src/ -d lib",
+    "dev": "light-server -c .lightserverrc"
   },
   "repository": {
     "type": "git",
