Fix eslint config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,42 @@
 {
-	"extends": "standard",
-	"rules": {
-		"semi": ["error", "always"],
-		"quotes": ["error", "double"]
-	}
+	"env": {
+		"browser": true,
+		"es6": true,
+		"node": true
+	},
+	"extends": "eslint:recommended",
+	"parserOptions": {
+		"ecmaFeatures": {
+			"experimentalObjectRestSpread": true,
+			"jsx": true
+		},
+		"sourceType": "module"
+	},
+	"plugins": [
+		"react"
+		],
+		"rules": {
+			"indent": [
+				"error",
+				"tab"
+			],
+			"linebreak-style": [
+				"error",
+				"unix"
+			],
+			"quotes": [
+				"error",
+				"double"
+			],
+			"semi": [
+				"error",
+				"always"
+			],
+			"no-console": [
+				"error",
+				{
+					"allow": ["log"]
+				}
+			]
+		}
 }
